# Nopimal

./: .gitignore  LICENSE  README.en.md  README.md  update.sh
code/: ana_fea.ipynb  analysis.py  infer.py  split.py  train.py
code/bak/: gen_feature_dict.py  split_chunks.py  train.py
code/bak/dataset_configs/: titanic.py  video_click_predict.py
code/bak/tools/: auto_features_names.py
code/classification/: analysis.py  cfg.py  gen_chunks.py  gen_feature_dict.py  gen_features.py  infer.py  main.ipynb  main.py  operator_legacy.py  operator_module.cpp  operator_module_test.py  setup.py  split_chunks.py  train.py  utils.py
code/classification/OperatorModule/: CMakeLists.txt  cal.py  main.cpp  operator_module.cpp
code/classification/bak/: gen_features.py  infer.py
code/classification/bak/dataset_configs/: purchase_predict.py  tencent_social_ads.py
code/classification/bak/operator_module/: py_operator.py
code/classification/dataset_configs/: alcohol.py  favorite_predict.py  purchase_predict.py  tencent_social_ads.py  titanic.py  video_click_predict.py
code/classification/operator_module/: __init__.py  operator_module.cpp  operator_module_test.py  py_operator.py  utils.py
code/classification/tools/: map2key_val_type.py
code/configs/: zsbank.py
code/feature/: main_feature.py  trd_feature.py
data/favorite_purchase_predict/: auto_features_names.json  download_list.txt  result.md
data/titanic/: download_list.txt  result.md
data/titanic/models/: ABT.m  GNB.m  LGB.m  RF.m  XGB.m
data/video_click_predict/: download_list.txt  result.md
(+6 files in other folders)
